--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
-    "duration": "^0.2.2"
+    "duration": "^0.2.2",
+    "react-resplit": "^1.3.2"
   }
 }
