feat: Add comprehensive request organization system

--- a/package.json
+++ b/package.json
@@ -34,7 +34,11 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
+    "@types/react-color": "^3.0.13",
+    "@types/uuid": "^10.0.0",
     "duration": "^0.2.2",
-    "react-resplit": "^1.3.2"
+    "react-color": "^2.19.3",
+    "react-resplit": "^1.3.2",
+    "uuid": "^12.0.0"
   }
 }
